--- a/alneira/Clase01oct2/src/main/resources/application.properties
+++ b/alneira/Clase01oct2/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/alejo
 spring.datasource.username=root
 spring.datasource.password=abc123
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57InnoDBDialect
+logging.level.org.hibernate.SQL=DEBUG
