--- a/mruizg/clase16parte1/src/main/resources/application.properties
+++ b/mruizg/clase16parte1/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/max
 spring.datasource.username=root
 spring.datasource.password=abc123
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57InnoDBDialect
